--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Welcome To M I TECH LLC</h1>
 
-    <p>We All Love Devops class</p> 
+    <p>We All Love Devops live class</p> 
 
 </body>
 
